<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_bottomSheetBehavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_bg_bottom_dialog_5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_txt_confirm_logout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/txt_confirm_logout"
                android:textColor="@color/light_blue"
                android:textSize="15sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <TextView
                android:id="@+id/tv_yes"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/txt_yes"
                android:foreground="?selectableItemBackgroundBorderless"
                android:textColor="@color/red"
                android:textSize="15sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_bg_bottom_dialog_10dp"
            android:gravity="center"
            android:text="@string/txt_no"
            android:foreground="?selectableItemBackgroundBorderless"
            android:textColor="@color/light_blue"
            android:textSize="15sp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>