<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dimens_10dp"
    android:paddingTop="@dimen/dimens_20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/iv_order_placed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_order_placed"
        android:tint="@color/colorWhite"
        android:background="@drawable/bg_iv_status_grey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/iv_order_placed"
        app:layout_constraintTop_toTopOf="@id/iv_order_placed"
        app:layout_constraintBottom_toBottomOf="@id/iv_order_placed"
        android:layout_marginLeft="@dimen/dimens_20dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/txt_order_placed"/>
    <include layout="@layout/layout_horizontal_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/line1"
        app:layout_constraintTop_toBottomOf="@id/iv_order_placed"
        app:layout_constraintBottom_toTopOf="@id/iv_shipping"
        app:layout_constraintLeft_toLeftOf="@id/iv_order_placed"
        app:layout_constraintRight_toRightOf="@id/iv_order_placed"
        />
    <ImageView
        android:id="@+id/iv_shipping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_shipping"
        android:tint="@color/colorWhite"
        android:background="@drawable/bg_iv_status_grey"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/iv_shipping"
        app:layout_constraintTop_toTopOf="@id/iv_shipping"
        app:layout_constraintBottom_toBottomOf="@id/iv_shipping"
        android:layout_marginLeft="@dimen/dimens_20dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/txt_shipping"/>
    <include layout="@layout/layout_horizontal_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/line2"
        app:layout_constraintTop_toBottomOf="@id/iv_shipping"
        app:layout_constraintBottom_toTopOf="@id/iv_shipped"
        app:layout_constraintLeft_toLeftOf="@id/iv_order_placed"
        app:layout_constraintRight_toRightOf="@id/iv_order_placed"
        />

    <ImageView
        android:id="@+id/iv_shipped"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_shipped"
        android:tint="@color/colorWhite"
        android:background="@drawable/bg_iv_status_grey"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line3"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/iv_shipped"
        app:layout_constraintTop_toTopOf="@id/iv_shipped"
        app:layout_constraintBottom_toBottomOf="@id/iv_shipped"
        android:layout_marginLeft="@dimen/dimens_20dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/txt_shipped"/>

    <include layout="@layout/layout_horizontal_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/line3"
        app:layout_constraintTop_toBottomOf="@id/iv_shipped"
        app:layout_constraintBottom_toTopOf="@id/iv_cancelled"
        app:layout_constraintLeft_toLeftOf="@id/iv_order_placed"
        app:layout_constraintRight_toRightOf="@id/iv_order_placed"
        />

    <ImageView
        android:id="@+id/iv_cancelled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cancelled"
        android:tint="@color/colorWhite"
        android:background="@drawable/bg_iv_status_grey"
        app:layout_constraintTop_toBottomOf="@id/line3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dimens_20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/iv_cancelled"
        app:layout_constraintTop_toTopOf="@id/iv_cancelled"
        app:layout_constraintBottom_toBottomOf="@id/iv_cancelled"
        android:layout_marginLeft="@dimen/dimens_20dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:text="@string/txt_cancelled"/>

    <!--<TextView
        android:id="@+id/tv_update_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:background="@drawable/bg_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txt_update"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>